Change log for zeit.web
=======================

2.37 (unreleased)
-----------------

- FIX: (Temporarily) xfail test which never works on Jenkins


2.36 (2015-12-10)
-----------------

- HOTFIX: correct path for Instant Articles

- HOTFIX: Hide separator for empty metadata

- HOTFIX: Fix navigation submenu appearance

- HOTFIX: Display gallery entry captions again

- ZON-2506: Add campaign parameters to ze.tt links

- MAINT: Fix asset_host etc to allow mounting under an URL prefix (for showcases)


2.35 (2015-12-08)
-----------------

- DEV-968: Distribute new Webtrekk script

- ZON-2446: Implement HTML for Instant Articles

- ZON-2478: Implement RSS feed for Instant Articles

- ZON-2460: Fix several problems for wrapper apps

- ZON-2450: Add more advertorials to navigation

- ZON-2449: Include kicker in title of socialflow feeds

- ZON-2429: "Snapshot" on homepage now is a normal teaser module

- MAINT: Cleanup community notifications

- FIX: Be more defensive in several places:
  * Portraitboxes with funny HTML
  * Images with empty copyright
  * Videos without still image


2.34 (2015-12-04)
-----------------

- HOTFIX: Fix lineage test

- MAINT: Use `requests` throughout, no more `urllib2.urlopen`

- PERF: Disable `requests` trying to read credentials from `~/.netrc`,
  saving quite a few superfluous disk accesses

- ZON-2408: Add overscroll effect

- ZON-2380: Trigger adreload in slideshows on every possible slide event

- MAINT: Polish nextread, advertising nextread and article lineage

- HOTFIX: Handle non-ascii author names in author feed

- MAINT: Use time-based caching for video series source

- FIX: Re-add zett and zmo teaser kicker modifier


2.33 (2015-11-27)
-----------------

- ZON-2352: Add liveglog teaser icon

- ZON-2357: Add Supertitle to Article Lineage

- ZON-2415: Add Zett Banner

- ZON-2355: Hide chronological article navigation covering fullwidth elements

- ZON-2369: Mark comments by freelancer
