@@ -75,8 +75,8 @@ def test_instant_article_feed_should_be_rendered(testserver):
     content = xml.xpath(
         '//item/content:encoded',
         namespaces={'content': 'http://purl.org/rss/1.0/modules/content/'})
-    assert ('<![CDATA[<esi:include src="http://www.zeit.de/instantarticle'
-            '/artikel/01" />]]') in lxml.etree.tostring(content[0])
+    assert ('<esi:include src="http://www.zeit.de/instantarticle'
+            '/artikel/01?cdata=true"/>') in lxml.etree.tostring(content[0])
 
     assert xml.xpath('//item/link/text()')[0].startswith(
         'http://www.zeit.de/artikel/01')
